@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.265 2009-08-20 11:09:42 martin Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.266 2009-09-01 21:28:33 ub Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Lang="en">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Description Lang="de">Ticket-Identifikator, z. B. Ticket#,Call#, MyTicket#. Als Standard wird Ticket# verwendet.</Description>
@@ -3188,6 +3188,18 @@
                 <Item Key="1">First Queue!</Item>
                 <Item Key="2">Second Queue!</Item>
             </Hash>
+        </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Ticket::Frontend::ShowCustomerTickets" Required="1" Valid="1">
+        <Description Lang="en">Do you want to show customer history tickets in AgentTicketPhone, AgentTicketEmail and AgentTicketCustomer?</Description>
+        <Description Lang="de">Sollen Kunden-Historie-Tickets in AgentTicketPhone, AgentTicketEmail und AgentTicketCustomer angezeigt werden?</Description>
+        <Group>Ticket</Group>
+        <SubGroup>Frontend::Agent</SubGroup>
+        <Setting>
+            <Option SelectedID="1">
+                <Item Key="0">No</Item>
+                <Item Key="1">Yes</Item>
+            </Option>
         </Setting>
     </ConfigItem>
     <ConfigItem Name="Ticket::Frontend::AgentTicketPhone###Priority" Required="1" Valid="1">
