@@ -2,13 +2,15 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.984 2009-09-01 20:29:01 ub Exp $
+# $Id: CHANGES,v 1.985 2009-09-01 21:29:41 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
 2.4.5 (2009/??/??)
+ - (2009/09/01) Fixed bug#4139 - Missing config option to show or hide customer
+    history tickets.
  - (2009/09/01) Fixed bug#4160 - Toolbar icons not correct in AdminCustomerUser.
  - (2009/09/01) Updated French translation, thanks to Remi Seguy
  - (2009/09/01) Added Options for FirstResponseTime,UpdateTime,SolutionTime and
